src/test/deca/syntax/invalid/class/extends_rien.deca
/*
	Description: extends rien 

	Resultat syntaxiquement ivalid

	Date: 20/01/2020

*/



class a extends {
	
	int y;
}

